--- a/config/printer-20241210_102133.cfg
+++ b/config/printer-20241210_102133.cfg
@@ -248,11 +248,30 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.007500, -0.005000, -0.015000, -0.030000, -0.037500
-#*# 	  -0.022500, -0.037500, -0.052500, -0.090000, -0.097500
-#*# 	  -0.012500, -0.037500, -0.065000, 0.087500, -0.017500
-#*# 	  0.022500, 0.010000, 0.012500, 0.215000, -0.077500
-#*# 	  0.095000, 0.120000, 0.142500, 0.015000, 0.012500
+#*# 	  -0.682500, -0.519167, -0.349167, -0.150000, 0.052500
+#*# 	  -0.349167, -0.244167, -0.141667, -0.020833, 0.134167
+#*# 	  -0.006667, 0.048333, 0.107500, 0.354167, 0.350000
+#*# 	  0.381667, 0.380833, 0.381667, 0.625000, 0.386667
+#*# 	  0.789167, 0.776667, 0.753333, 0.601667, 0.577500
+#*# x_count = 5
+#*# y_count = 5
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 30.0
+#*# max_x = 190.0
+#*# min_y = 30.0
+#*# max_y = 190.0
+#*#
+#*# [bed_mesh p1]
+#*# version = 1
+#*# points =
+#*# 	  -0.682500, -0.519167, -0.349167, -0.150000, 0.052500
+#*# 	  -0.349167, -0.244167, -0.141667, -0.020833, 0.134167
+#*# 	  -0.006667, 0.048333, 0.107500, 0.354167, 0.350000
+#*# 	  0.381667, 0.380833, 0.381667, 0.625000, 0.386667
+#*# 	  0.789167, 0.776667, 0.753333, 0.601667, 0.577500
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
