Change printer config

--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -60,6 +60,7 @@ rotation_distance: 8
 endstop_pin: probe:z_virtual_endstop #^PA7
 #position_endstop: 0.0
 position_max: 250
+position_min: -5
 
 [extruder]
 max_extrude_only_distance: 100.0
@@ -67,18 +68,19 @@ step_pin: PB3
 dir_pin: PB4
 enable_pin: !PC3
 microsteps: 16
-rotation_distance: 33.500
+gear_ratio: 35:10
+rotation_distance: 26.359
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: PA1
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC5
 control: pid
-pid_Kp: 21.527
-pid_Ki: 1.063
-pid_Kd: 108.982
+pid_Kp: 23.561
+pid_Ki: 1.208
+pid_Kd: 114.859
 min_temp: 0
-max_temp: 250
+max_temp: 260
 
 [heater_bed]
 heater_pin: PA2
@@ -91,6 +93,9 @@ pid_Ki: 0.770
 pid_Kd: 948.182
 min_temp: 0
 max_temp: 130
+
+[heater_fan hotend_fan]
+pin: PC0
 
 [fan]
 pin: PA0
@@ -112,9 +117,9 @@ max_z_accel: 100
 sensor_pin: ^PB1
 control_pin: PB0
 probe_with_touch_mode: True
-x_offset: -30
-y_offset: 0
-z_offset: 0.7
+x_offset: -31.8
+y_offset: -40.5
+#z_offset = 0.800
 stow_on_each_sample: False
 speed: 10
 samples: 1
@@ -150,7 +155,7 @@ screw4:30,195
 screw4_name:4
 
 [safe_z_home]
-home_xy_position: 100,100 # Change coordinates to the center of your print bed
+home_xy_position: 160,120 # Change coordinates to the center of your print bed
 speed: 80
 z_hop: 10 # Move up 10mm
 z_hop_speed: 10
@@ -163,10 +168,10 @@ sid_pin: PB15
 encoder_pins: ^PB14, ^PB10
 click_pin: ^!PB2
 
-[input_shaper]
-shaper_freq_x: 49.4  # frequency for the X mark of the test model
-shaper_freq_y: 49.4  # frequency for the Y mark of the test model
-shaper_type: mzv
+#[input_shaper]
+#shaper_freq_x: 49.4  # frequency for the X mark of the test model
+#shaper_freq_y: 49.4  # frequency for the Y mark of the test model
+#shaper_type: mzv
 
 [board_pins]
 aliases:
@@ -249,34 +254,16 @@ gcode:
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [bltouch]
+#*# z_offset = 0.700
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.552500, -0.150000, 0.115000, 0.330000, 0.512500
-#*# 	  0.115000, 0.315000, 0.432500, 0.565000, 0.800000
-#*# 	  0.185000, 0.330000, 0.402500, 0.717500, 0.727500
-#*# 	  0.050000, 0.277500, 0.367500, 0.847500, 0.922500
-#*# 	  0.247500, 0.460000, 0.595000, 0.615000, 0.682500
-#*# x_count = 5
-#*# y_count = 5
-#*# mesh_x_pps = 2
-#*# mesh_y_pps = 2
-#*# algo = bicubic
-#*# tension = 0.2
-#*# min_x = 30.0
-#*# max_x = 190.0
-#*# min_y = 30.0
-#*# max_y = 190.0
-#*#
-#*# [bed_mesh p1]
-#*# version = 1
-#*# points =
-#*# 	  -0.552500, -0.150000, 0.115000, 0.330000, 0.512500
-#*# 	  0.115000, 0.315000, 0.432500, 0.565000, 0.800000
-#*# 	  0.185000, 0.330000, 0.402500, 0.717500, 0.727500
-#*# 	  0.050000, 0.277500, 0.367500, 0.847500, 0.922500
-#*# 	  0.247500, 0.460000, 0.595000, 0.615000, 0.682500
+#*# 	  0.040000, 0.077500, 0.130000, 0.212500, 0.222500
+#*# 	  -0.012500, 0.005000, 0.010000, 0.072500, 0.077500
+#*# 	  -0.077500, 0.010000, 0.012500, 0.082500, 0.085000
+#*# 	  -0.075000, -0.037500, -0.015000, 0.030000, 0.055000
+#*# 	  -0.027500, 0.015000, 0.082500, 0.157500, 0.150000
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
